# effectiviwonder

./: LICENSE  README.md  effectiviwonder.cabal
lib/: Effectiviwonder.hs
lib/Effectiviwonder/: Die.hs  Interact.hs  State.hs  Yield.hs
tests/: tests.hs
