cabal-version:       2.0
name:                effectiviwonder
version:             0.1.0.0
synopsis:            An experiment combining the ReaderT pattern and extensible
                     records.

description:         An experiment combining the ReaderT pattern and extensible
                     records.
                     .
                     How can we easily switch "base capabilities" in the
                     ReaderT environment when they are used by other capabilities?
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Data
extra-source-files:  CHANGELOG.md,
                     README.md
build-type:          Simple

source-repository head
    type: git
    location: git@github.com:danidiaz/effectiviwonder.git

library
  exposed-modules:     Effectiviwonder
                       Effectiviwonder.State
  build-depends:       base                 >= 4.10.0.0 && < 5,
                       red-black-record     >= 2.0.2.2
  hs-source-dirs:      lib
  default-language:    Haskell2010

