cabal-version:       2.0
name:                effectiviwonder
version:             0.1.0.0
synopsis:            An experiment combining the ReaderT pattern and extensible
                     records.

description:         An experiment combining the ReaderT pattern and extensible
                     records.
                     .
                     How can we easily switch "base capabilities" in the
                     ReaderT environment when they are used by other capabilities?
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Data
extra-source-files:  CHANGELOG.md,
                     README.md
build-type:          Simple

source-repository head
    type: git
    location: git@github.com:danidiaz/effectiviwonder.git

library
  exposed-modules:     Effectiviwonder
                       Effectiviwonder.State
                       Effectiviwonder.Yield
                       Effectiviwonder.Interact
                       Effectiviwonder.Die
  build-depends:       base                 >= 4.10.0.0 && < 5,
                       sop-core             >= 0.4.0.0,
                       red-black-record     >= 2.0.2.2,
                       transformers         >= 0.5, 
                       mtl                  >= 2.2.2,
                       containers           >= 0.5,
                       managed              >= 1.0.6
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:
                       base                 >= 4.10.0.0 && < 5,
                       tasty                >= 0.10.1.1,
                       tasty-hunit          >= 0.9.2,
                       red-black-record     >= 2.0.2.2,
                       mtl                  >= 2.2.2,
                       transformers         >= 0.5, 
                       containers           >= 0.5,
                       managed              >= 1.0.6,
                       effectiviwonder      
  default-language:    Haskell2010

